--- a/test/fixtures/tags.yml
+++ b/test/fixtures/tags.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
+html:
+  name: "HTML"
 
-two:
-  name: MyString
+css:
+  name: "CSS"
