--- a/test/fixtures/comments.yml
+++ b/test/fixtures/comments.yml
@@ -1,11 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  author: MyString
-  content: MyText
-  post_id: 
+comment_one:
+  author: "john"
+  content: "this is a comment"
 
-two:
-  author: MyString
-  content: MyText
-  post_id: 
+comment_two:
+  author: "Clara"
+  content: "this is another comment"
